<resources>
    <string name="app_name">My Appstore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_1">推荐</string>
    <string name="button_2">教育</string>
    <string name="button_3">影音</string>
    <string name="button_4">游戏</string>
    <string name="button_5">音乐</string>
    <string name="download">下载</string>
    <string name="open">打开</string>
    <string name="install">安装</string>
    <string name="app_info">应用信息</string>
</resources>