<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:id="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="false"
            app:shimmer_base_alpha="1"
            app:shimmer_duration="1000"
            app:shimmer_highlight_alpha="0.8"
            >

            <Button
                android:id="@+id/button_1"
                style="@style/MainButton"
                android:text="@string/button_1" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_marginStart="30dp"
            android:id="@+id/shimmer_view_container_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="false"
            app:shimmer_base_alpha="1"
            app:shimmer_duration="1000"
            app:shimmer_highlight_alpha="0.5">

            <Button
                android:id="@+id/button_2"
                style="@style/MainButton"
                android:text="@string/button_2" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="false"
            app:shimmer_base_alpha="1"
            app:shimmer_duration="1000"
            app:shimmer_highlight_alpha="0.5">

            <Button
                android:id="@+id/button_3"
                style="@style/MainButton"
                android:text="@string/button_3" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="false"
            app:shimmer_base_alpha="1"
            app:shimmer_duration="1000"
            app:shimmer_highlight_alpha="0.5">

            <Button
                android:id="@+id/button_4"
                style="@style/MainButton"
                android:text="@string/button_4" />
        </com.facebook.shimmer.ShimmerFrameLayout>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="false"
            app:shimmer_base_alpha="1"
            app:shimmer_duration="1000"
            app:shimmer_highlight_alpha="0.5">

            <Button
                android:id="@+id/button_5"
                style="@style/MainButton"
                android:text="@string/button_5" />
        </com.facebook.shimmer.ShimmerFrameLayout>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="false"
            app:shimmer_base_alpha="1"
            app:shimmer_duration="1000"
            app:shimmer_highlight_alpha="0.5">

            <ImageView
                android:id="@+id/search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/search_view_select"
                android:contentDescription="image_search" />
        </com.facebook.shimmer.ShimmerFrameLayout>


    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout1"
        android:descendantFocusability="afterDescendants"
        android:focusable="true"/>

</RelativeLayout>
